Revert "fix: SP hero copy overlap"
This reverts commit e13cc1b45202dc7731f578b713f6d35528706faa.

--- a/style.css
+++ b/style.css
@@ -782,8 +782,8 @@ svg {
   }
   .hero__logo { width: 220px; }
   .hero__navera-logo { width: 73px; }
-  .hero__copy-area { position: static; padding: 20px 20px 0; text-align: center; margin-top: 0px; position: relative; z-index: 1; }
-  .hero__maincopy { width: 100%; max-width: 360px; margin: 0 auto; transform: none; margin-top: 0px; }
+  .hero__copy-area { position: static; padding: 20px 20px 0; text-align: center; margin-top: -100px; position: relative; z-index: 1; }
+  .hero__maincopy { width: 100%; max-width: 360px; margin: 0 auto; transform: none; margin-top: -60px; }
   .hero__subcopy { font-size: 16px; padding: 0; transform: none; line-height: 1.8; }
   .hero__subcopy br { display: none; }
   .hero__illust { margin-top: 16px; overflow: hidden; transform: none; position: relative; z-index: 1; }
